<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    >
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logoeurostep"
    />
    <TextView
        android:id="@+id/tvUvodniText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uvodna_recenica"
        android:layout_below="@+id/ivLogo"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:textAlignment="center"
        android:textSize="10pt"
        android:textColor="@android:color/black"
    />
    <Button
        android:id="@+id/btnTeams"
        android:text="@string/teams"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/tvUvodniText"
        android:layout_marginVertical="20dp"
        android:backgroundTint="#FF5733"
        android:textColor="@android:color/black"
    />
    <Button
        android:id="@+id/btnPlayers"
        android:text="@string/players"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginLeft="70dp"
        android:layout_below="@id/tvUvodniText"
        android:layout_toRightOf="@+id/btnTeams"
        android:layout_alignTop="@id/btnTeams"
        android:backgroundTint="#FF5733"
        android:textColor="@android:color/black"
    />
    <Button
        android:id="@+id/btnTodayInfo"
        android:text="@string/todays_info"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_centerInParent="true"
        android:layout_below="@id/btnTeams"
        android:backgroundTint="#FF5733"
        android:textColor="@android:color/black"
    />
    <Button
        android:id="@+id/btnCoaches"
        android:text="@string/coaches"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginLeft="70dp"
        android:layout_below="@id/btnTodayInfo"
        android:layout_toRightOf="@id/btnAppInfo"
        android:layout_marginVertical="20dp"
        android:backgroundTint="#FF5733"
        android:textColor="@android:color/black"
    />
    <Button
        android:id="@+id/btnAppInfo"
        android:text="@string/app_info"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_alignLeft="@id/btnTeams"
        android:layout_below="@id/btnTodayInfo"
        android:layout_marginVertical="20dp"
        android:backgroundTint="#FF5733"
        android:textColor="@android:color/black"
    />
    <ImageView
        android:id="@+id/ivlogorioja"
        android:layout_width="@dimen/sponsors_width"
        android:layout_height="@dimen/sponsors_height"
        android:src="@drawable/eurorioja"
        android:layout_below="@+id/btnAppInfo"
        android:layout_marginLeft="@dimen/list_padding"
        />
    <ImageView
        android:id="@+id/ivlogolenovo"
        android:layout_width="@dimen/sponsors_width"
        android:layout_height="@dimen/sponsors_height"
        android:src="@drawable/eurolenovo"
        android:layout_below="@+id/btnAppInfo"
        android:layout_toRightOf="@id/ivlogorioja"
        android:layout_marginRight="@dimen/list_padding"
        />


</RelativeLayout>